fix scroll on IE11

--- a/src/app/item/item.component.scss
+++ b/src/app/item/item.component.scss
@@ -11,7 +11,13 @@
 
 button {
   border: none;
+  background-color: transparent;
 }
-.title{
-  color: darken($main,50);
+.title {
+  color: darken($main, 50);
+}
+
+img {
+  min-height: 200px;
+  border-bottom: 1px solid #efefef;
 }
